added a sample table to the right half of the page

--- a/show.html
+++ b/show.html
@@ -165,6 +165,73 @@
 					<a href="https://www.w3schools.com" class="middletext">
 					Fire
 					</a>
+					<table style="width:90%">
+						<tr>
+							<th>Move</th>
+							<th>Power</th>
+							<th>Description</th>
+						</tr>
+						<tr>
+							<td>Tackle</td><td>35</td><td>Level:—</td>
+						</tr>
+						<tr>
+							<td>Leer</td><td>0</td><td>Level:—</td>
+						</tr>
+						<tr>
+							<td>Charge</td><td>0</td><td>Level:—</td>
+						</tr>
+						<tr>
+							<td>Leer</td><td>0</td><td>Level:5</td>
+						</tr>
+						<tr>
+							<td>Charge</td><td>0</td><td>Level:9</td>
+						</tr>
+						<tr>
+							<td>Bite</td><td>60</td><td>Level:60</td>
+						</tr>
+						<tr>
+							<td>Spark</td><td>65</td><td>Level:65</td>
+						</tr>
+						<tr>
+							<td>Roar</td><td>0</td><td>Level:0</td>
+						</tr>
+						<tr>
+							<td>Swagger</td><td>0</td><td>Level:28</td>
+						</tr>
+						<tr>
+							<td>Crunch</td><td>80</td><td>Level:80</td>
+						</tr>
+						<tr>
+							<td>Thunder Fang</td><td>65</td><td>Level:42</td>
+						</tr>
+						<tr>
+							<td>Scary Face</td><td>0</td><td>Level:49</td>
+						</tr>
+						<tr>
+							<td>Discharge</td><td>80</td><td>Level:56</td>
+						</tr>
+						<tr>
+							<td>Roar</td><td>0</td><td>TM05</td>
+						</tr>
+						<tr>
+							<td>Ice Fang</td><td>65</td><td>Egg Move</td>
+						</tr>
+						<tr>
+							<td>Fire Fang</td><td>65</td><td>Egg Move</td>
+						</tr>
+						<tr>
+							<td>Thunder Fang</td><td>65</td><td>Egg Move</td>
+						</tr>
+						<tr>
+							<td>Quick Attack</td><td>35</td><td>Egg Move</td>
+						</tr>
+						<tr>
+							<td>Howl</td><td>35</td><td>Egg Move</td>
+						</tr>
+						<tr>
+							<td>Take Down</td><td>90</td><td>Egg Move</td>
+						</tr>
+					</table>
 				</div>
 				
 			</div>
