fixed the right side of the page. Started using a scroll bar.

--- a/show.html
+++ b/show.html
@@ -48,6 +48,7 @@
 
 		.centercolumn
 		{
+		display: flex;
 		background-color: orange;
 		height: 100%;
 		margin-left:10%;
@@ -73,9 +74,11 @@
 		height:100%;
 		width: 50%;
 		margin: 0;
+		max-height: 600px;
 		display: inline-block;
 		text-align: center;
 		}
+		
 		
 		nav a:hover
 		{
@@ -160,11 +163,8 @@
 				
 				
 			</div>
-		    <div class="half" style="background-color: #3aa6dd;">
+		    <div class="half" style="background-color: #3aa6dd; overflow-y: scroll;">
 				<div>
-					<a href="https://www.w3schools.com" class="middletext">
-					Fire
-					</a>
 					<table style="width:90%">
 						<tr>
 							<th>Move</th>
