--- a/show.html
+++ b/show.html
@@ -107,29 +107,53 @@
 		font-size:0;
 		}
 
-		#table_shell{}
+		#table_shell{
+		margin: auto;
+		width: 420px;}
 		
-		.scroll_table {
-		border: 1px solid black;
-		border-collapse: collapse;
-		width: 380px;
+		table{border-collapse: collapse;}
+		
+		#fixed_table{
+		background-color: gray;
+		width: 418px;}
+		
+		#fixed_table thead tr th
+		{border: 1px solid black;
+		padding-left:0;
+		padding-right:0;}
+		
+		#scroll_table{
+		display: block;
+		background-color: white;
+		width: 418px;
+		max-height: 455px;
+		overflow-y: scroll;
+		overflow-x: hidden;
+		border-left: 1px solid black;
+		border-bottom: 1px solid black;
 		}
 		
-		.scroll_table tbody tr td
-		{
+		#scroll_table tbody tr td{
 		border: 1px solid black;
+		border-top-style: none;
+		padding-left:0;
+		padding-right:0;
 		}
 		
-		.scroll_table  tbody{
-		border: 1px solid black;
+		#scroll_table tbody{
+		width: 100%;
+		display: inline-table;
 		}
 		
-		.scroll_table thead tr
-		{
-		border: 1px solid black;
-		}
-
-		
+		#scroll_table tbody tr td:nth-child(1),
+		#fixed_table thead tr th:nth-child(1)
+		{width:139px;}
+		#scroll_table tbody tr td:nth-child(2),
+		#fixed_table thead tr th:nth-child(2)
+		{width:77px;}
+		#scroll_table tbody tr td:nth-child(3)
+		{padding-left: 4px;
+		text-align: left;}
 	</style>
     <body>
 		<header>
@@ -188,7 +212,7 @@
 			</div>
 		    <div class="half" style="background-color: #3aa6dd;">
 				<div id="table_shell">
-					<table class="scroll_table">
+					<table id="fixed_table">
 						<thead>
 							<tr>
 								<th>Move</th>
@@ -196,6 +220,8 @@
 								<th>Description</th>
 							</tr>
 						</thead>
+					</table>
+					<table id="scroll_table">
 						<tbody>
 							<tr>
 								<td>Tackle</td><td>35</td><td>Level:—</td>
