--- a/home.html
+++ b/home.html
@@ -2,9 +2,35 @@
 <html>
     <head>
 		<meta charset="utf-8" />
-		<link rel='stylesheet' href='navbarstyle.css'>
-		<link rel='stylesheet' href='showstyle.css'>
-		<link rel='stylesheet' href='homestyle.css'>
+		<link rel='stylesheet' href='commonstyle.css'>
+		<style>
+			.homebox
+			{	
+			width: 800px;
+			margin-right: auto;
+			margin-left: auto;
+			padding-left: 20px;
+			padding-right: 20px;
+			padding-bottom: 30px;
+			border-radius: 10px;
+			background-color: lightgray;
+			}
+
+			.homebox img
+			{
+				width: 335px;
+				height: 300px;
+				margin-left: 40px;
+			}
+
+			.homebox .rowbox
+			{text-align: center;}
+
+			h4
+			{
+				margin-bottom: 4px;
+			}
+		</style>
     </head>
 	<body>
 		<header>
